--- a/test-scss/competition.html
+++ b/test-scss/competition.html
@@ -164,7 +164,7 @@
 
 
 
-    <div class="filter__place center d-flex align-items-center justify-content-between mt-4 pt-2">
+    <div class="filter__place center d-flex align-items-center justify-content-between mt-md-4 pt-2">
         <div class="nav nav-tabs border-0 d-none d-md-flex" id="nav-tab" role="tablist">
             <a class="filter-a f-14 c-light-text active show" active" id="nav-home-tab" data-toggle="tab"
                 href="#nav-home" role="tab" aria-controls="nav-home" aria-selected="true">ყველა</a>
@@ -177,8 +177,8 @@
             <a class="filter-a f-14 c-light-text" id="nav-contact-tab" data-toggle="tab" href="#nav-contact" role="tab"
                 aria-controls="nav-contact" aria-selected="false">ბიზნესი</a>
         </div>
-        <div class="drop-parent col-12 col-sm-6 col-md-3 px-0 mt-3 d-block d-md-none">
-            <div class=" dropdown-toggle border col-7 drop d-flex align-items-center justify-content-between" type="button"
+        <div class="drop-parent col-12 col-sm-6 col-md-3 px-0 mt-3 mb-2 pt-1 d-block d-md-none">
+            <div class=" dropdown-toggle border col-7 f-16 drop d-flex align-items-center justify-content-between" type="button"
                 id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 <span>
                     ნებისმიერი
@@ -189,7 +189,7 @@
                       </svg>
                 </span>
             </div>
-            <div class="dropdown-menu mt-2 px-2" aria-labelledby="dropdownMenuButton">
+            <div class="dropdown-menu mt-2 px-2 col-7" aria-labelledby="dropdownMenuButton">
                 <div class="blcok pt-2 pb-2 pointer hover-bc-banner">
                     <span class="mr-2 pl-2 helvetica-55 f-14 c-light-text d-flex align-items-center">
                         დიზაინი</span>
@@ -212,7 +212,7 @@
 
     </div>
 
-    <section class="py-md-4 py-2">
+    <section class="py-md-3 py-2">
         <div class="center">
             <div class="d-flex justify-content-between flex-wrap main courses__main row master-class">
                 <div class="block col-12 col-md-6 col-lg-4 d-flex flex-column justify-content-end scroll-block my-md-3 my-1">
@@ -226,7 +226,7 @@
                             <div class="d-flex- flex-column px-md-4 px-3 mx-md-1 mx-0 mb-3">
                                 <div class="w-100 d-flex align-items-center justify-content-between">
                                     <span class="f-14 c-light-text helvetica-55">ლოგო დიზაინ კონკურსი</span>
-                                    <div class="f-14 c-light-text mt-2 helvetica-55 d-none d-md-inline-block">
+                                    <div class="f-14 c-light-text helvetica-55 d-none d-md-inline-block">
                                         <span class=" helvetica-75 c-black bc-gray-light br-5 p-1 f-16 f-16">95</span>:<span
                                             class=" helvetica-75 c-black bc-gray-light br-5 p-1 f-16 f-16">45</span>:<span
                                             class=" helvetica-75 c-black bc-gray-light br-5 p-1 f-16 f-16">25</span>
@@ -263,7 +263,7 @@
                             <div class="d-flex- flex-column px-md-4 px-3 mx-md-1 mx-0 mb-3">
                                 <div class="w-100 d-flex align-items-center justify-content-between">
                                     <span class="f-14 c-light-text helvetica-55">ლოგო დიზაინ კონკურსი</span>
-                                    <div class="f-14 c-light-text mt-2 helvetica-55 d-none d-md-inline-block">
+                                    <div class="f-14 c-light-text helvetica-55 d-none d-md-inline-block">
                                         <span class=" helvetica-75 c-black bc-gray-light br-5 p-1 f-16 f-16">95</span>:<span
                                             class=" helvetica-75 c-black bc-gray-light br-5 p-1 f-16 f-16">45</span>:<span
                                             class=" helvetica-75 c-black bc-gray-light br-5 p-1 f-16 f-16">25</span>
@@ -300,7 +300,7 @@
                             <div class="d-flex- flex-column px-md-4 px-3 mx-md-1 mx-0 mb-3">
                                 <div class="w-100 d-flex align-items-center justify-content-between">
                                     <span class="f-14 c-light-text helvetica-55">ლოგო დიზაინ კონკურსი</span>
-                                    <div class="f-14 c-light-text mt-2 helvetica-55 d-none d-md-inline-block">
+                                    <div class="f-14 c-light-text helvetica-55 d-none d-md-inline-block">
                                         <span class=" helvetica-75 c-black bc-gray-light br-5 p-1 f-16 f-16">95</span>:<span
                                             class=" helvetica-75 c-black bc-gray-light br-5 p-1 f-16 f-16">45</span>:<span
                                             class=" helvetica-75 c-black bc-gray-light br-5 p-1 f-16 f-16">25</span>
