--- a/test-scss/courses.html
+++ b/test-scss/courses.html
@@ -153,21 +153,21 @@
                     role="tab" aria-controls="nav-contact" aria-selected="false">ფასდაკლებით</a>
             </div>
             <div class="drop-parent col-7 ml-n3 col-sm-5 d-flex d-md-none pl-0">
-                <div class=" dropdown-toggle course__dropper position-relative w-100 px-1 drop d-flex align-items-center justify-content-between bc-gray-light" type="button"
+                <div class=" dropdown-toggle course__dropper position-relative w-100  drop d-flex align-items-center justify-content-between bc-gray-light" type="button"
                     id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                     <span class="f-14">
                         პოპულარული
                     </span>
                     <img src="./img/Path.svg" alt="">
                 </div>
-                <div class="dropdown-menu w-100 mt-2" aria-labelledby="dropdownMenuButton">
+                <div class="dropdown-menu w-100 mt-2 col-11" aria-labelledby="dropdownMenuButton">
                     <div class="blcok mt-2 pointer w-100">
-                        <p class="px-3 w-100 c-light-text hover-bc-gray transition bc-white py-2">
+                        <p class="px-3 w-100 c-light-text hover-bc-gray transition bc-white py-2 f-14">
                             ახალი
                         </p>
                     </div>
                     <div class="blcok mt-2 pointer w-100">
-                        <p class="px-3 w-100 c-light-text hover-bc-gray transition bc-white py-2">
+                        <p class="px-3 w-100 c-light-text hover-bc-gray transition bc-white py-2 f-14">
                             ფასდაკლებით
                         </p>
                     </div>
@@ -178,21 +178,22 @@
         </div>
         <div class="center filter__block collapse mt-3" id="demo">
             <div class="col-12 pl-0 pr-0 mt-3">
-                <span class="f-13 c-black helvetica-75 d-block mb-2">პროგრამა</span>
+                <span class="f-14 c-black helvetica-75 d-block mb-2">პროგრამა</span>
                 <div class="search-input-parent ">
-                    <input class="search-input filter-responsive w-100 hover-bc-white bc-gray-light" type="text">
+                    <input class="search-input w-100 hover-bc-white bc-gray-light f-14" type="text">
                 </div>
             </div>
 
             <div class="drop-parent col-12 pl-0 pr-0 mt-3">
-                <span class="f-13 c-black helvetica-75 d-block mb-2">სკოლა</span>
-                <div class=" dropdown-toggle w-100 filter-responsive drop d-flex align-items-center justify-content-between bc-white" type="button"
+                <span class="f-14 c-black helvetica-75 d-block mb-2">სკოლა</span>
+                <div class="f-14 dropdown-toggle w-100 filter-responsive drop d-flex align-items-center justify-content-between bc-white" type="button"
                     id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                     <span>
                         ნებისმიერი
                     </span>
+                    <img src="./img/Path.svg" alt="">
                 </div>
-                <div class="dropdown-menu w-100 mt-2" aria-labelledby="dropdownMenuButton">
+                <div class="dropdown-menu w-100 mt-2 pt-0" aria-labelledby="dropdownMenuButton">
                     <div class="blcok mt-2 pointer w-100">
                         <p class="px-3 w-100 c-light-text hover-bc-gray transition bc-white py-2">
                             ნებისმიერი
@@ -216,15 +217,17 @@
                 </div>
             </div>
             <div class="drop-parent col-12 pl-0 pr-0 mt-3">
-                <span class="f-13 c-black helvetica-75 d-block mb-2">დონე</span>
+                <span class="f-14 c-black helvetica-75 d-block mb-2">დონე</span>
 
-                <div class=" dropdown-toggle filter-responsive w-100 drop d-flex align-items-center justify-content-between bc-white" type="button"
+                <div class=" dropdown-toggle filter-responsive w-100 drop d-flex align-items-center justify-content-between bc-white f-14" type="button"
                     id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                     <span>
                         ნებისმიერი
                     </span>
+                    <img src="./img/Path.svg" alt="">
+
                 </div>
-                <div class="dropdown-menu w-100 mt-2" aria-labelledby="dropdownMenuButton">
+                <div class="dropdown-menu w-100 mt-2 pt-0" aria-labelledby="dropdownMenuButton">
                     <div class="blcok mt-2 pointer w-100">
                         <p class="px-3 w-100 c-light-text hover-bc-gray transition bc-white py-2">
                             ნებისმიერი
@@ -249,15 +252,17 @@
             </div>
 
             <div class="drop-parent col-12 pr-0 pl-0 mt-3">
-                <span class="f-13 c-black helvetica-75 d-block mb-2">პროგრამა</span>
+                <span class="f-14 c-black helvetica-75 d-block mb-2">პროგრამა</span>
 
-                <div class=" dropdown-toggle filter-responsive w-100 drop d-flex align-items-center justify-content-between bc-white" type="button"
+                <div class=" dropdown-toggle filter-responsive w-100 drop d-flex align-items-center justify-content-between bc-white f-14" type="button"
                     id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                     <span>
                         ნებისმიერი
                     </span>
+                    <img src="./img/Path.svg" alt="">
+
                 </div>
-                <div class="dropdown-menu w-100 mt-2 px-2" aria-labelledby="dropdownMenuButton">
+                <div class="dropdown-menu w-100 mt-2 pt-0 px-2" aria-labelledby="dropdownMenuButton">
                     <div class="blcok mt-2">
                         <label class="cheks mb-0 d-flex align-items-center mt-3" for="isPoliticallyExposedPerson">
                             <span class="mr-2 pl-2 helvetica-55 f-14 c-light-text d-flex align-items-center">
@@ -300,7 +305,7 @@
 
         </div>
     </section>
-    <section class="popular__courses">
+    <section class="popular__courses pt-md-3">
         <div class="center">
             <div class="d-flex justify-content-between flex-wrap main courses__main row">
                 <div class="block col-12 col-md-6 col-lg-4 d-flex flex-column justify-content-end scroll-block my-3">
@@ -316,20 +321,22 @@
 
                             <div class="d-flex- flex-column px-4 mx-1 mb-3">
                                 <span class="f-14 c-light-text helvetica-55">საბაზისო</span>
-                                <h1 class="f-20 mt-4 c-black helvetica-75">WEB დეველოპმენტი</h1>
+                                <h1 class="f-20 mt-md-4 mt-3  c-black helvetica-75">WEB დეველოპმენტი</h1>
                                 <span class="f-14 c-light-text helvetica-55">ქრისტინა კემულარია</span>
-                                <span class="f-14 d-block mt-4 c-card-text helvetica-55 mb-1">ტექნოლოგიების განვითარებამ
+                                <span class="f-14 d-none d-md-block mt-4 c-card-text helvetica-55 mb-1">ტექნოლოგიების განვითარებამ
                                     შესაძლებელი გახადა, რომ სხვადასხვა
                                     პროფესიის ადამიანებმა თავად
                                     შეძლონ საკუთარი იდეების რეალიზება.</span>
                             </div>
-                            <div class="bottom mt-5 d-flex align-items-center justify-content-between pr-3">
+                            <div class="bottom mt-md-5 mt-3 pt-1 pt-md-0 d-flex align-items-center justify-content-between pr-3">
                                 <div
                                     class="left__side d-flex align-items-center flex-wrap py-2 text__c__left br-c-light-blue">
                                     <span class="f-23 pl-md-3 pl-2 helvetica-55 c-black py-1">1250 ₾</span>
+                                    <span class="ml-md-3 ml-1 helvetica-75 c-black like__remove">1250 ₾</span>
+
                                 </div>
                                 <div class="right__side">
-                                    <button class=" helvetica-75 blue-hover-button">გაიგე მეტი</button>
+                                    <button class="d-none d-md-flex helvetica-75 blue-hover-button d-none d-md-flex">გაიგე მეტი</button>
                                 </div>
                             </div>
                         </div>
@@ -349,20 +356,22 @@
 
                             <div class="d-flex- flex-column px-4 mx-1 mb-3">
                                 <span class="f-14 c-light-text helvetica-55">საბაზისო</span>
-                                <h1 class="f-20 mt-4 c-black helvetica-75">WEB დეველოპმენტი</h1>
+                                <h1 class="f-20 mt-md-4 mt-3  c-black helvetica-75">WEB დეველოპმენტი</h1>
                                 <span class="f-14 c-light-text helvetica-55">ქრისტინა კემულარია</span>
-                                <span class="f-14 d-block mt-4 c-card-text helvetica-55 mb-1">ტექნოლოგიების განვითარებამ
+                                <span class="f-14 d-none d-md-block mt-4 c-card-text helvetica-55 mb-1">ტექნოლოგიების განვითარებამ
                                     შესაძლებელი გახადა, რომ სხვადასხვა
                                     პროფესიის ადამიანებმა თავად
                                     შეძლონ საკუთარი იდეების რეალიზება.</span>
                             </div>
-                            <div class="bottom mt-5 d-flex align-items-center justify-content-between pr-3">
+                            <div class="bottom mt-md-5 mt-3 pt-1 pt-md-0 d-flex align-items-center justify-content-between pr-3">
                                 <div
                                 class="left__side d-flex align-items-center flex-wrap py-2 text__c__left br-c-orange">
                                 <span class="f-23 pl-md-3 pl-2 helvetica-55 c-black py-1">1250 ₾</span>
+                                <span class="ml-md-3 ml-1 helvetica-75 c-black like__remove">1250 ₾</span>
+
                             </div>
                                 <div class="right__side">
-                                    <button class=" helvetica-75 orange-hover-button">გაიგე მეტი</button>
+                                    <button class="d-none d-md-flex helvetica-75 orange-hover-button d-none d-md-flex">გაიგე მეტი</button>
 
                                 </div>
                             </div>
@@ -383,20 +392,22 @@
 
                             <div class="d-flex- flex-column px-4 mx-1 mb-3">
                                 <span class="f-14 c-light-text helvetica-55">საბაზისო</span>
-                                <h1 class="f-20 mt-4 c-black helvetica-75">WEB დეველოპმენტი</h1>
+                                <h1 class="f-20 mt-md-4 mt-3  c-black helvetica-75">WEB დეველოპმენტი</h1>
                                 <span class="f-14 c-light-text helvetica-55">ქრისტინა კემულარია</span>
-                                <span class="f-14 d-block mt-4 c-card-text helvetica-55 mb-1">ტექნოლოგიების განვითარებამ
+                                <span class="f-14 d-none d-md-block mt-4 c-card-text helvetica-55 mb-1">ტექნოლოგიების განვითარებამ
                                     შესაძლებელი გახადა, რომ სხვადასხვა
                                     პროფესიის ადამიანებმა თავად
                                     შეძლონ საკუთარი იდეების რეალიზება.</span>
                             </div>
-                            <div class="bottom mt-5 d-flex align-items-center justify-content-between pr-3">
+                            <div class="bottom mt-md-5 mt-3 pt-1 pt-md-0 d-flex align-items-center justify-content-between pr-3">
                                 <div
                                     class="left__side d-flex align-items-center flex-wrap py-2 text__c__left br-c-purple">
                                     <span class="f-23 pl-md-3 pl-2 helvetica-55 c-black py-1">1250 ₾</span>
+                                    <span class="ml-md-3 ml-1 helvetica-75 c-black like__remove">1250 ₾</span>
+
                                 </div>
                                 <div class="right__side">
-                                    <button class=" helvetica-75 purple-hover-button">გაიგე მეტი</button>
+                                    <button class="d-none d-md-flex helvetica-75 purple-hover-button">გაიგე მეტი</button>
 
                                 </div>
                             </div>
@@ -416,20 +427,22 @@
 
                             <div class="d-flex- flex-column px-4 mx-1 mb-3">
                                 <span class="f-14 c-light-text helvetica-55">საბაზისო</span>
-                                <h1 class="f-20 mt-4 c-black helvetica-75">WEB დეველოპმენტი</h1>
+                                <h1 class="f-20 mt-md-4 mt-3  c-black helvetica-75">WEB დეველოპმენტი</h1>
                                 <span class="f-14 c-light-text helvetica-55">ქრისტინა კემულარია</span>
-                                <span class="f-14 d-block mt-4 c-card-text helvetica-55 mb-1">ტექნოლოგიების განვითარებამ
+                                <span class="f-14 d-none d-md-block mt-4 c-card-text helvetica-55 mb-1">ტექნოლოგიების განვითარებამ
                                     შესაძლებელი გახადა, რომ სხვადასხვა
                                     პროფესიის ადამიანებმა თავად
                                     შეძლონ საკუთარი იდეების რეალიზება.</span>
                             </div>
-                            <div class="bottom mt-5 d-flex align-items-center justify-content-between pr-3">
+                            <div class="bottom mt-md-5 mt-3 pt-1 pt-md-0 d-flex align-items-center justify-content-between pr-3">
                                 <div
                                     class="left__side d-flex align-items-center flex-wrap py-2 text__c__left br-c-light-blue">
                                     <span class="f-23 pl-md-3 pl-2 helvetica-55 c-black py-1">1250 ₾</span>
+                                    <span class="ml-md-3 ml-1 helvetica-75 c-black like__remove">1250 ₾</span>
+
                                 </div>
                                 <div class="right__side">
-                                    <button class=" helvetica-75 blue-hover-button">გაიგე მეტი</button>
+                                    <button class="d-none d-md-flex helvetica-75 blue-hover-button">გაიგე მეტი</button>
                                 </div>
                             </div>
                         </div>
@@ -449,20 +462,22 @@
 
                             <div class="d-flex- flex-column px-4 mx-1 mb-3">
                                 <span class="f-14 c-light-text helvetica-55">საბაზისო</span>
-                                <h1 class="f-20 mt-4 c-black helvetica-75">WEB დეველოპმენტი</h1>
+                                <h1 class="f-20 mt-md-4 mt-3  c-black helvetica-75">WEB დეველოპმენტი</h1>
                                 <span class="f-14 c-light-text helvetica-55">ქრისტინა კემულარია</span>
-                                <span class="f-14 d-block mt-4 c-card-text helvetica-55 mb-1">ტექნოლოგიების განვითარებამ
+                                <span class="f-14 d-none d-md-block mt-4 c-card-text helvetica-55 mb-1">ტექნოლოგიების განვითარებამ
                                     შესაძლებელი გახადა, რომ სხვადასხვა
                                     პროფესიის ადამიანებმა თავად
                                     შეძლონ საკუთარი იდეების რეალიზება.</span>
                             </div>
-                            <div class="bottom mt-5 d-flex align-items-center justify-content-between pr-3">
+                            <div class="bottom mt-md-5 mt-3 pt-1 pt-md-0 d-flex align-items-center justify-content-between pr-3">
                                 <div
                                 class="left__side d-flex align-items-center flex-wrap py-2 text__c__left br-c-orange">
                                 <span class="f-23 pl-md-3 pl-2 helvetica-55 c-black py-1">1250 ₾</span>
+                                <span class="ml-md-3 ml-1 helvetica-75 c-black like__remove">1250 ₾</span>
+
                             </div>
                                 <div class="right__side">
-                                    <button class=" helvetica-75 orange-hover-button">გაიგე მეტი</button>
+                                    <button class="d-none d-md-flex helvetica-75 orange-hover-button">გაიგე მეტი</button>
 
                                 </div>
                             </div>
@@ -483,20 +498,22 @@
 
                             <div class="d-flex- flex-column px-4 mx-1 mb-3">
                                 <span class="f-14 c-light-text helvetica-55">საბაზისო</span>
-                                <h1 class="f-20 mt-4 c-black helvetica-75">WEB დეველოპმენტი</h1>
+                                <h1 class="f-20 mt-md-4 mt-3  c-black helvetica-75">WEB დეველოპმენტი</h1>
                                 <span class="f-14 c-light-text helvetica-55">ქრისტინა კემულარია</span>
-                                <span class="f-14 d-block mt-4 c-card-text helvetica-55 mb-1">ტექნოლოგიების განვითარებამ
+                                <span class="f-14 d-none d-md-block mt-4 c-card-text helvetica-55 mb-1">ტექნოლოგიების განვითარებამ
                                     შესაძლებელი გახადა, რომ სხვადასხვა
                                     პროფესიის ადამიანებმა თავად
                                     შეძლონ საკუთარი იდეების რეალიზება.</span>
                             </div>
-                            <div class="bottom mt-5 d-flex align-items-center justify-content-between pr-3">
+                            <div class="bottom mt-md-5 mt-3 pt-1 pt-md-0 d-flex align-items-center justify-content-between pr-3">
                                 <div
                                     class="left__side d-flex align-items-center flex-wrap py-2 text__c__left br-c-purple">
                                     <span class="f-23 pl-md-3 pl-2 helvetica-55 c-black py-1">1250 ₾</span>
+                                    <span class="ml-md-3 ml-1 helvetica-75 c-black like__remove">1250 ₾</span>
+
                                 </div>
                                 <div class="right__side">
-                                    <button class=" helvetica-75 purple-hover-button">გაიგე მეტი</button>
+                                    <button class="d-none d-md-flex helvetica-75 purple-hover-button">გაიგე მეტი</button>
 
                                 </div>
                             </div>
