--- a/test-scss/index.html
+++ b/test-scss/index.html
@@ -115,12 +115,15 @@
             </nav>
         </div>
         <div class="burger-menu flex " id="burger-menu">
-            <div class=" burger-menu-child ">
+            <div class=" burger-menu-child d-flex flex-column justify-content-start">
+                <div class="search-input-parent mb-4 pb-3">
+                    <input class="search-input w-100 hover-bc-white bc-gray-light f-14" type="text" placeholder="dzieba">
+                </div>
                 <div id="accordion" class="mx-auto d-flex flex-column up__side w-100">
                     <div class="card">
                         <div class="card-header p-0" id="headingOne">
                             <h5 class="mb-0">
-                                <span class="btn px-0 c-light-text f-16 helvetica-75">
+                                <span class="btn px-0 c-light-text header-list helvetica-75">
                                     კურსები
 
                                 </span>
@@ -135,7 +138,7 @@
 
 
 
-                    <a class="btn px-0 c-light-text f-16 helvetica-75 text-left ">
+                    <a class="btn px-0 c-light-text header-list helvetica-75 text-left ">
                         მასტერკლასები
                     </a>
 
@@ -143,7 +146,7 @@
                     <div class="card">
                         <div class="card-header py-2 px-0" id="headingTwo">
                             <h5 class="mb-0">
-                                <a class=" collapsed  p-0 c-light-text f-16 helvetica-75 d-flex justify-content-between" data-toggle="collapse"
+                                <a class=" collapsed  p-0 c-light-text header-list helvetica-75 d-flex justify-content-between" data-toggle="collapse"
                                     data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
                                     შეთავაზებები
                                     <img class="icon" src="./img/Path.svg" alt="">
@@ -151,25 +154,25 @@
                             </h5>
                         </div>
                         <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordion">
-                            <div class="card-body ml-2 px-0 py-0">
-                                <ul class="border-left border-left-1 center__side fuuter__lists mb-3 ml-2 p-0 pl-4">
+                            <div class="card-body  px-0 py-0">
+                                <ul class="border-left border-left-1 center__side fuuter__lists mb-3  p-0 pl-4">
                                     <li class="list d-flex align-items-center mt-2">
-                                        <a class="c-light-text f-14 helvetica-55 pointer">პაკეტები</a>
+                                        <a class="c-light-text footer-list helvetica-55 pointer">პაკეტები</a>
                                     </li>
                                     <li class="list d-flex align-items-center mt-3">
-                                        <a class="c-light-text f-14 helvetica-55 pointer">ფასდაკლებები</a>
+                                        <a class="c-light-text footer-list helvetica-55 pointer">ფასდაკლებები</a>
                                     </li>
                                     <li class="list d-flex align-items-center mt-3">
-                                        <a class="c-light-text f-14 helvetica-55 pointer">კონკუსრები</a>
+                                        <a class="c-light-text footer-list helvetica-55 pointer">კონკუსრები</a>
                                     </li>
                                 </ul>
                             </div>
                         </div>
                     </div>
-                    <a class="btn c-light-text f-16 helvetica-75 text-left px-0">
+                    <a class="btn c-light-text header-list helvetica-75 text-left px-0">
                         ბლოგი
                     </a>
-                    <a class="btn c-light-text f-16 helvetica-75 text-left px-0">
+                    <a class="btn c-light-text header-list helvetica-75 text-left px-0">
                         ჩვენ შესახებ
                     </a>
                 </div>
@@ -896,7 +899,7 @@
             </ul>
         </div>
         <div id="accordionExample" class="mx-auto d-flex flex-column d-md-none up__side center">
-            <li class="list d-flex align-items-center mt-4">
+            <li class="list d-flex align-items-center my-4">
                 <a href="" class="hover-imgs">
                     <img class="before" src="./img/social-icons/behance-1-gray.svg" alt="">
                     <img class="after" src="./img/social-icons/behance-1.svg" alt="">
@@ -928,7 +931,7 @@
             <div class="card">
                 <div class="card-header px-0" id="headingOne_1">
                     <h5 class="mb-0 position-relative d-flex justify-content-between">
-                        <a class=" c-dark-text f-14 px-0 helvetica-75 d-flex justify-content-between w-100"
+                        <a class=" c-dark-text footer-list px-0 helvetica-75 d-flex justify-content-between w-100"
                             data-toggle="collapse" data-target="#collapseOne_1" aria-expanded="true"
                             aria-controls="collapseOne_1">
                             დაგვიკავშირდით
@@ -944,10 +947,10 @@
                         <ul class="left__side fuuter__lists p-0">
                             <li class="list d-flex align-items-center">
                                 <img class="mr-3" src="./img/konvert.svg" alt="">
-                                <a class="c-light-text pointer f-14 helvetica-55">support@digitaledu.ge</a>
+                                <a class="c-light-text pointer footer-list helvetica-55">support@digitaledu.ge</a>
                             </li>
                             <li class="list d-flex align-items-center mt-2">
-                                <span class="c-light-text f-14 helvetica-55">ილია ჭავჭავაძის გამზ. 33, თბილისი</span>
+                                <span class="c-light-text footer-list helvetica-55">ილია ჭავჭავაძის გამზ. 33, თბილისი</span>
                             </li>
                         </ul>
                     </div>
@@ -965,7 +968,7 @@
             <div class="card">
                 <div class="card-header px-0" id="headingTwo_2">
                     <h5 class="mb-0 d-flex justify-content-between">
-                        <a class="btn collapsed w-100 d-flex justify-content-between px-0 c-dark-text f-14 helvetica-75"
+                        <a class="btn collapsed w-100 d-flex justify-content-between px-0 c-dark-text footer-list helvetica-75"
                             data-toggle="collapse" data-target="#collapseTwo_2" aria-expanded="false"
                             aria-controls="collapseTwo_2">
                             გვერდები
@@ -978,19 +981,19 @@
                     <div class="card-body px-0">
                         <ul class="center__side fuuter__lists  p-0">
                             <li class="list d-flex align-items-center">
-                                <a class="c-light-text f-14 helvetica-55 pointer">კურსები</a>
+                                <a class="c-light-text footer-list helvetica-55 pointer">კურსები</a>
                             </li>
                             <li class="list d-flex align-items-center mt-3">
-                                <a class="c-light-text f-14 helvetica-55 pointer">მასტერკლასები</a>
+                                <a class="c-light-text footer-list helvetica-55 pointer">მასტერკლასები</a>
                             </li>
                             <li class="list d-flex align-items-center mt-3">
-                                <a class="c-light-text f-14 helvetica-55 pointer">შეთავაზებები</a>
+                                <a class="c-light-text footer-list helvetica-55 pointer">შეთავაზებები</a>
                             </li>
                             <li class="list d-flex align-items-center mt-3">
-                                <a class="c-light-text f-14 helvetica-55 pointer">ბლოგი</a>
+                                <a class="c-light-text footer-list helvetica-55 pointer">ბლოგი</a>
                             </li>
                             <li class="list d-flex align-items-center mt-3">
-                                <a class="c-light-text f-14 helvetica-55 pointer">ჩვენ შესახებ</a>
+                                <a class="c-light-text footer-list helvetica-55 pointer">ჩვენ შესახებ</a>
                             </li>
                         </ul>
                     </div>
@@ -999,7 +1002,7 @@
             <div class="card">
                 <div class="card-header px-0" id="headingThree">
                     <h5 class="mb-0 d-flex justify-content-between">
-                        <a class="btn collapsed px-0 w-100 d-flex justify-content-between c-dark-text f-14 helvetica-75"
+                        <a class="btn collapsed px-0 w-100 d-flex justify-content-between c-dark-text footer-list helvetica-75"
                             data-toggle="collapse" data-target="#collapseThree" aria-expanded="false"
                             aria-controls="collapseThree">
                             გამოიწერე სიახლეები
@@ -1011,7 +1014,7 @@
                 <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordion">
                     <div class="card-body px-0">
                         <li class="list d-flex align-items-center">
-                            <span class="c-light-text f-14 helvetica-55 w-100 p-0">გამოიწერე სიახლეები და მიიღე დროულად
+                            <span class="c-light-text footer-list helvetica-55 w-100 p-0">გამოიწერე სიახლეები და მიიღე დროულად
                                 ყველა
                                 ინფორმაცია ჩვენ შესახებ </span>
                         </li>
@@ -1025,7 +1028,7 @@
                                 <div class="mt-2">
                                     <label class="cheks mb-0 d-flex align-items-center mt-3"
                                         for="isPoliticallyExposedPerson">
-                                        <span class="mr-2 pl-2 helvetica-55 f-14 c-light-text">ვეთანხმები
+                                        <span class="mr-2 pl-2 helvetica-55 footer-list c-light-text">ვეთანხმები
                                             პირობებს</span>
                                         <input type="checkbox" id="isPoliticallyExposedPerson" />
                                         <span class="checkmark"></span>
