--- a/test-scss/vlog.html
+++ b/test-scss/vlog.html
@@ -159,12 +159,13 @@
             <a class="filter-a f-14 c-light-text" id="nav-contact-tab" data-toggle="tab" href="#nav-contact" role="tab"
                 aria-controls="nav-contact" aria-selected="false">სქრინშოტი</a>
         </div>
-        <div class="drop-parent col-12 col-sm-6 col-md-3 mt-3 d-block d-md-none px-0">
+        <div class="drop-parent col-6 col-md-3 mt-3 d-block d-md-none px-0">
             <div class=" dropdown-toggle border w-100 drop d-flex align-items-center justify-content-between" type="button"
                 id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 <span>
-                    ნებისმიერი
+                    ყველა
                 </span>
+                <img src="./img/Path.svg" alt="">
             </div>
             <div class="dropdown-menu mt-2 px-2" aria-labelledby="dropdownMenuButton">
                 <div class="blcok pt-2 pb-2 pointer hover-bc-banner">
@@ -193,10 +194,10 @@
 
     </div>
 
-    <section class=" pb-md-3 pb-2 mt-md-1">
+    <section class=" pb-md-3 pb-2 mt-md-1 mt-3">
         <div class="center">
             <div class="d-flex flex-wrap main courses__main row master-class">
-                <div class="block col-12 col-md-6 col-lg-4 d-flex flex-column justify-content-end scroll-block my-3">
+                <div class="block col-12 col-md-6 col-lg-4 d-flex flex-column justify-content-end scroll-block my-1">
                     <div class="d-flex flex-column inside__block">
 
                         <div class="up__side d-flex align-items-start overflow-hidden ">
@@ -216,7 +217,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="block col-12 col-md-6 col-lg-4 d-flex flex-column justify-content-end scroll-block my-3">
+                <div class="block col-12 col-md-6 col-lg-4 d-flex flex-column justify-content-end scroll-block my-1">
                     <div class="d-flex flex-column inside__block">
 
                         <div class="up__side d-flex align-items-start overflow-hidden ">
@@ -235,7 +236,7 @@
                             </div>
                         </div>
                     </div>
-                </div>                <div class="block col-12 col-md-6 col-lg-4 d-flex flex-column justify-content-end scroll-block my-3">
+                </div>                <div class="block col-12 col-md-6 col-lg-4 d-flex flex-column justify-content-end scroll-block my-1">
                     <div class="d-flex flex-column inside__block">
 
                         <div class="up__side d-flex align-items-start overflow-hidden ">
@@ -254,7 +255,7 @@
                             </div>
                         </div>
                     </div>
-                </div>                <div class="block col-12 col-md-6 col-lg-4 d-flex flex-column justify-content-end scroll-block my-3">
+                </div>                <div class="block col-12 col-md-6 col-lg-4 d-flex flex-column justify-content-end scroll-block my-1">
                     <div class="d-flex flex-column inside__block">
 
                         <div class="up__side d-flex align-items-start overflow-hidden ">
@@ -273,7 +274,7 @@
                             </div>
                         </div>
                     </div>
-                </div>                <div class="block col-12 col-md-6 col-lg-4 d-flex flex-column justify-content-end scroll-block my-3">
+                </div>                <div class="block col-12 col-md-6 col-lg-4 d-flex flex-column justify-content-end scroll-block my-1">
                     <div class="d-flex flex-column inside__block">
 
                         <div class="up__side d-flex align-items-start overflow-hidden ">
@@ -292,7 +293,7 @@
                             </div>
                         </div>
                     </div>
-                </div>                <div class="block col-12 col-md-6 col-lg-4 d-flex flex-column justify-content-end scroll-block my-3">
+                </div>                <div class="block col-12 col-md-6 col-lg-4 d-flex flex-column justify-content-end scroll-block my-1">
                     <div class="d-flex flex-column inside__block">
 
                         <div class="up__side d-flex align-items-start overflow-hidden ">
@@ -311,7 +312,7 @@
                             </div>
                         </div>
                     </div>
-                </div>                <div class="block col-12 col-md-6 col-lg-4 d-flex flex-column justify-content-end scroll-block my-3">
+                </div>                <div class="block col-12 col-md-6 col-lg-4 d-flex flex-column justify-content-end scroll-block my-1">
                     <div class="d-flex flex-column inside__block">
 
                         <div class="up__side d-flex align-items-start overflow-hidden ">
@@ -330,7 +331,7 @@
                             </div>
                         </div>
                     </div>
-                </div>                <div class="block col-12 col-md-6 col-lg-4 d-flex flex-column justify-content-end scroll-block my-3">
+                </div>                <div class="block col-12 col-md-6 col-lg-4 d-flex flex-column justify-content-end scroll-block my-1">
                     <div class="d-flex flex-column inside__block">
 
                         <div class="up__side d-flex align-items-start overflow-hidden ">
