--- a/test-scss/work.html
+++ b/test-scss/work.html
@@ -156,12 +156,13 @@
             <a class="filter-a f-14 c-light-text" id="nav-contact-tab" data-toggle="tab" href="#nav-contact" role="tab"
                 aria-controls="nav-contact" aria-selected="false">ბიზნესი</a>
         </div>
-        <div class="drop-parent px-0 col-12 col-sm-6 col-md-3 mt-3 d-block d-md-none">
+        <div class="drop-parent px-0 col-6 col-md-3 mt-3 d-block d-md-none">
             <div class=" dropdown-toggle border w-100 drop d-flex align-items-center justify-content-between" type="button"
                 id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 <span>
                     ნებისმიერი
                 </span>
+                <img src="./img/Path.svg" alt="">
             </div>
             <div class="dropdown-menu mt-2 px-2" aria-labelledby="dropdownMenuButton">
                 <div class="blcok pt-2 pb-2 pointer hover-bc-banner">
@@ -188,13 +189,13 @@
 
 
 
-    <section class="student__works work-items py-3">
+    <section class="student__works work-items pb-3 mt-3">
         <div class=" d-flex flex-column align-items-center m-h-def-2">
             <div class="center">
 
                 <div class="row d-flex  align-items-center">
 
-                    <div class="br-8  bc-white col-lg-3 col-md-6 col-12 my-3"
+                    <div class="br-8  bc-white col-lg-3 col-md-6 col-12 my-1"
                         data-toggle="modal" data-target="#exampleModal">
                         <div class="block br-8 pointer">
                             <article class="article d-flex flex-column">
@@ -210,7 +211,7 @@
                         </div>
 
                     </div>
-                    <div class="br-8  bc-white col-lg-3 col-md-6 col-12 my-3"
+                    <div class="br-8  bc-white col-lg-3 col-md-6 col-12 my-1"
                         data-toggle="modal" data-target="#exampleModal">
                         <div class="block br-8 pointer">
                             <article class="article d-flex flex-column">
@@ -226,7 +227,7 @@
                         </div>
 
                     </div>
-                    <div class="br-8  bc-white col-lg-3 col-md-6 col-12 my-3"
+                    <div class="br-8  bc-white col-lg-3 col-md-6 col-12 my-1"
                         data-toggle="modal" data-target="#exampleModal">
                         <div class="block br-8 pointer">
                             <article class="article d-flex flex-column">
@@ -242,7 +243,7 @@
                         </div>
 
                     </div>
-                    <div class="br-8  bc-white col-lg-3 col-md-6 col-12 my-3"
+                    <div class="br-8  bc-white col-lg-3 col-md-6 col-12 my-1"
                         data-toggle="modal" data-target="#exampleModal">
                         <div class="block br-8 pointer">
                             <article class="article d-flex flex-column">
@@ -258,7 +259,7 @@
                         </div>
 
                     </div>
-                    <div class="br-8  bc-white col-lg-3 col-md-6 col-12 my-3"
+                    <div class="br-8  bc-white col-lg-3 col-md-6 col-12 my-1"
                         data-toggle="modal" data-target="#exampleModal">
                         <div class="block br-8 pointer">
                             <article class="article d-flex flex-column">
@@ -274,7 +275,7 @@
                         </div>
 
                     </div>
-                    <div class="br-8  bc-white col-lg-3 col-md-6 col-12 my-3"
+                    <div class="br-8  bc-white col-lg-3 col-md-6 col-12 my-1"
                         data-toggle="modal" data-target="#exampleModal">
                         <div class="block br-8 pointer">
                             <article class="article d-flex flex-column">
@@ -290,7 +291,7 @@
                         </div>
 
                     </div>
-                    <div class="br-8  bc-white col-lg-3 col-md-6 col-12 my-3"
+                    <div class="br-8  bc-white col-lg-3 col-md-6 col-12 my-1"
                         data-toggle="modal" data-target="#exampleModal">
                         <div class="block br-8 pointer">
                             <article class="article d-flex flex-column">
@@ -306,7 +307,7 @@
                         </div>
 
                     </div>
-                    <div class="br-8  bc-white col-lg-3 col-md-6 col-12 my-3"
+                    <div class="br-8  bc-white col-lg-3 col-md-6 col-12 my-1"
                         data-toggle="modal" data-target="#exampleModal">
                         <div class="block br-8 pointer">
                             <article class="article d-flex flex-column">
@@ -322,7 +323,7 @@
                         </div>
 
                     </div>
-                    <div class="br-8  bc-white col-lg-3 col-md-6 col-12 my-3"
+                    <div class="br-8  bc-white col-lg-3 col-md-6 col-12 my-1"
                         data-toggle="modal" data-target="#exampleModal">
                         <div class="block br-8 pointer">
                             <article class="article d-flex flex-column">
@@ -338,7 +339,7 @@
                         </div>
 
                     </div>
-                    <div class="br-8  bc-white col-lg-3 col-md-6 col-12 my-3"
+                    <div class="br-8  bc-white col-lg-3 col-md-6 col-12 my-1"
                         data-toggle="modal" data-target="#exampleModal">
                         <div class="block br-8 pointer">
                             <article class="article d-flex flex-column">
@@ -363,7 +364,7 @@
     <div class="modal fade " id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered modal-section">
             <div class="modal-content">
-                <div class="modal-header d-flex justify-content-between">
+                <div class="modal-header d-flex justify-content-between border-0">
                     <div class="d-flex align-items-center">
                         <img class="mr-2" src="./img/Group 793.svg" alt="">
                         <div class="d-flex flex-column">
@@ -389,16 +390,16 @@
 
                         <div class="carousel-inner d-flex align-items-center">
                             <div class="carousel-item active">
-                                <div class=" background pointer w-100 childs br-10"
+                                <div class=" background pointer w-100 childs"
                                     style="background-image: url(./img/car.svg);">
                                 </div>
                             </div>
                             <div class="carousel-item">
-                                <div class=" background pointer w-100 childs br-10"
+                                <div class=" background pointer w-100 childs"
                                     style="background-image: url(./img/design-2.svg);"></div>
                             </div>
                             <div class="carousel-item">
-                                <div class=" background pointer w-100 childs br-10"
+                                <div class=" background pointer w-100 childs"
                                     style="background-image: url(./img/design-3.svg);"></div>
                             </div>
                         </div>
@@ -415,7 +416,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="modal-footer position-relative pb-3 pb-md-0">
+                <div class="modal-footer position-relative pb-3 pb-md-0 border-0">
                     <div class=" position-relative w-100">
                         <ol class="indicators d-flex align-items-stretch overflow-auto w-100">
                             <li data-target="#carouselExampleIndicators" class="col-6 col-ms-4 col-md-5 br-8 row active"
