--- a/test-scss/about-us.html
+++ b/test-scss/about-us.html
@@ -147,7 +147,8 @@
                 <ul class="d-flex align-items-center">
                     <li class="list mr-4 d-flex align-items-center">
                         <a href="about-us.html"
-                            class="nav__a c-light-text c-hover-blue keep-all transition helvetica-75 keep-all">ჩვენ შესახებ</a>
+                            class="nav__a c-light-text c-hover-blue keep-all transition helvetica-75 keep-all">ჩვენ
+                            შესახებ</a>
                     </li>
                     <li class="list mr-4 d-flex align-items-center">
                         <a href="mediakit.html"
@@ -167,31 +168,44 @@
     </section>
 
 
-    <seciton class="design__section overflow-hidden">
-        <div class="center">
-            <div class="row d-flex align-items-center py-60 justify-content-md-between justify-content-center flex-column flex-lg-row-reverse">
-                <div class="left__side position-relative d-none d-md-flex col-md-8 col-lg-5">
-                    <div class="w-100 py-4 block">
-                        <img class="w-100" src="./img/Artboard-1.png" alt="">
+    <seciton class="design__section overflow-hidden ">
+        <div class="py-60">
+
+            <div class="center">
+                <span class="helvetica-75 d-inline-block mb-md-4 mb-3 f-28 c-black ">როგორ ვქმნით საუკეთესო
+                    სასწავლო</span>
+
+            </div>
+            <div class="center">
+                <div
+                    class=" d-flex align-items-center  justify-content-md-between justify-content-center flex-column flex-lg-row-reverse">
+                    <div class="left__side position-relative d-none d-md-flex col-md-8 col-lg-5">
+                        <div class="w-100 py-4 block">
+                            <img class="w-100" src="./img/Artboard-1.png" alt="">
+                        </div>
                     </div>
-                </div>
-                <div class="right__side col-12 col-lg-7 pl-0">
-                    <span class="mr-2 pl-2 helvetica-75 d-inline-block mb-md-4 mb-3 f-28 c-black">როგორ ვქმნით საუკეთესო სასწავლო</span>
-                    <span class="mr-2 pl-2 helvetica-75 d-inline-block mb-md-3 pb-md-1 mb-2 mt-md-3 f-24 c-black">აუდიტორიაზე ადაპტირებული </span>
-                    <span class="mr-2 pl-2 helvetica-55 d-inline-block mb-md-3 pb-md-1 mb-2 lh-24 f-16 c-card-text">კურსი მოიცავს იმ
-                        ძირითად საკითხებს, რომლის ცოდნაც აუცილებელია UI & UX დიზაინერად მუშაობისთვის. კურსის
-                        განმავლობაში სტუდენტები დაეუფლებიან Adobe Experience design-სა და SketchApp-ს, რის შემდეგაც
-                        ისინი დამოუკიდებლად შეძლებენ ციფრული პროდუქტების დიზაინის შექმნას.</span>
+                    <div class="right__side col-12 col-lg-7 pl-0">
+                        <span
+                            class=" helvetica-75 d-inline-block mb-md-3 pb-md-1 mb-2 mt-md-3 f-24 c-black">აუდიტორიაზე
+                            ადაპტირებული </span>
+                        <span
+                            class=" helvetica-55 d-inline-block mb-md-3 pb-md-1 mb-2 lh-24 f-16 c-card-text">კურსი
+                            მოიცავს იმ
+                            ძირითად საკითხებს, რომლის ცოდნაც აუცილებელია UI & UX დიზაინერად მუშაობისთვის. კურსის
+                            განმავლობაში სტუდენტები დაეუფლებიან Adobe Experience design-სა და SketchApp-ს, რის შემდეგაც
+                            ისინი დამოუკიდებლად შეძლებენ ციფრული პროდუქტების დიზაინის შექმნას.</span>
                         <div class="block d-flex d-md-none py-3 mb-3">
                             <img class="w-100" src="./img/Artboard-1.png" alt="">
                         </div>
-                    <span class="mr-2 pl-2 helvetica-75 d-inline-block mb-md-3 pb-md-1 mb-2 f-24 c-black">რეალური ქეისები, რეალური სამუშაო 
-                        შესაძლებლობები </span>
+                        <span class=" helvetica-75 d-inline-block mb-md-3 pb-md-1 mb-2 f-24 c-black lh-35">რეალური
+                            ქეისები, რეალური სამუშაო
+                            შესაძლებლობები </span>
 
-                    <span class="mr-2 pl-2 helvetica-55 d-inline-block mb-3 lh-24 f-16 c-card-text">კურსი მოიცავს იმ
-                        ძირითად საკითხებს, რომლის ცოდნაც აუცილებელია UI & UX დიზაინერად მუშაობისთვის. კურსის
-                        განმავლობაში სტუდენტები დაეუფლებიან Adobe Experience design-სა და SketchApp-ს, რის შემდეგაც
-                        ისინი დამოუკიდებლად შეძლებენ ციფრული პროდუქტების დიზაინის შექმნას.</span>
+                        <span class=" helvetica-55 d-inline-block mb-3 lh-24 f-16 c-card-text">კურსი მოიცავს იმ
+                            ძირითად საკითხებს, რომლის ცოდნაც აუცილებელია UI & UX დიზაინერად მუშაობისთვის. კურსის
+                            განმავლობაში სტუდენტები დაეუფლებიან Adobe Experience design-სა და SketchApp-ს, რის შემდეგაც
+                            ისინი დამოუკიდებლად შეძლებენ ციფრული პროდუქტების დიზაინის შექმნას.</span>
+                    </div>
                 </div>
             </div>
         </div>
@@ -199,19 +213,23 @@
     <section class="count__section about__count bc-banner d-flex">
         <div class="scroll-center position-relative">
             <div class="d-flex justify-content-between pb-5 mt-n3 mt-md-0 pt-md-5 flex-nowrap overflow-auto">
-                <div class="block scroll-block col-12 col-sm-6 col-md-3 mt-3 d-flex flex-column justify-content-center align-items-center">
+                <div
+                    class="block scroll-block col-12 col-sm-6 col-md-3 mt-3 d-flex flex-column justify-content-center align-items-center">
                     <span class="f-35 c-blue helvetica-75 d-block mb-3">1234</span>
                     <span class="f-20 c-light-text helvetica-75">კურსდამთავრებული</span>
                 </div>
-                <div class="block scroll-block col-12 col-sm-6 col-md-3 mt-3 d-flex flex-column justify-content-center align-items-center">
+                <div
+                    class="block scroll-block col-12 col-sm-6 col-md-3 mt-3 d-flex flex-column justify-content-center align-items-center">
                     <span class="f-35 c-blue helvetica-75 d-block mb-3">45</span>
                     <span class="f-20 c-light-text helvetica-75">დასრულებული კურსი</span>
                 </div>
-                <div class="block scroll-block col-12 col-sm-6 col-md-3 mt-3 d-flex flex-column justify-content-center align-items-center">
+                <div
+                    class="block scroll-block col-12 col-sm-6 col-md-3 mt-3 d-flex flex-column justify-content-center align-items-center">
                     <span class="f-35 c-blue helvetica-75 d-block mb-3">240</span>
                     <span class="f-20 c-light-text helvetica-75">დასაქმებული</span>
                 </div>
-                <div class="block scroll-block col-12 col-sm-6 col-md-3 mt-3 d-flex flex-column justify-content-center align-items-center">
+                <div
+                    class="block scroll-block col-12 col-sm-6 col-md-3 mt-3 d-flex flex-column justify-content-center align-items-center">
                     <span class="f-35 c-blue helvetica-75 d-block mb-3">84</span>
                     <span class="f-20 c-light-text helvetica-75">მასტერკლასი</span>
                 </div>
@@ -231,14 +249,14 @@
                     </div>
                     <div class="right__side col-12 col-md-5 d-md-flex flex-column">
                         <span class="f-24 helvetica-75 c-black d-block mb-md-4 mb-2">რატომ უნდა შემოგვიერთდე?</span>
-                        <span class="f-16 c-card-text helvetica-55">დღეს ნებისმიერი ბიზნესისა თუ ინდივიდისთვის 
-                            წარმატების მისაღწევად აუცილებელია ციფრულ 
-                            ტექნოლოგიაზე ოპტიმიზირებულ სტრატეგიასა თუ 
+                        <span class="f-16 c-card-text helvetica-55">დღეს ნებისმიერი ბიზნესისა თუ ინდივიდისთვის
+                            წარმატების მისაღწევად აუცილებელია ციფრულ
+                            ტექნოლოგიაზე ოპტიმიზირებულ სტრატეგიასა თუ
                             სტრუქტურასთან ადაპტირება.</span>
-                        <span class="f-16 c-card-text helvetica-55 d-flex mt-4">ციფრულ ეკოსისტემაზე მორგებულ, კომფორტულ 
-                            გარემოში შეხვდები ადამიანებს, რომლებიც საკუთარ 
-                            ხედვებსა და უნიკალურ მიდგომებს გაგიზიარებენ, რაც 
-                            სასურველი კარიერული ეტაპების მიღწევაში 
+                        <span class="f-16 c-card-text helvetica-55 d-flex mt-4">ციფრულ ეკოსისტემაზე მორგებულ, კომფორტულ
+                            გარემოში შეხვდები ადამიანებს, რომლებიც საკუთარ
+                            ხედვებსა და უნიკალურ მიდგომებს გაგიზიარებენ, რაც
+                            სასურველი კარიერული ეტაპების მიღწევაში
                             დაგეხმარება.</span>
 
                     </div>
@@ -250,9 +268,10 @@
     <section class="join__us bc-banner py-60">
         <div class="center d-flex flex-column align-items-center">
             <span class="f-24 helvetica-75 c-black d-block mb-3 pt-3">შეოგვიერთდი</span>
-            <span class="f-16 helvetica-55 pt-2 c-card-text text-center lh-24 d-block col-12 col-md-5">გაიარე ჩვენთან არსებუი კურსები და გახდი ციფრული 
+            <span class="f-16 helvetica-55 pt-2 c-card-text text-center lh-24 d-block col-12 col-md-5">გაიარე ჩვენთან
+                არსებუი კურსები და გახდი ციფრული
                 ინდუსტრიის აკადეიის კურსდათავრებული</span>
-                <button class="blue-button f-14 mt-4">კურსები</button>
+            <button class="blue-button f-14 mt-4 helvetica-55">კურსები</button>
         </div>
     </section>
 
@@ -346,7 +365,7 @@
                         </div>
                         <div class="mt-2">
                             <label class="cheks mb-0 d-flex align-items-center mt-3" for="isPoliticallyExposedPerson">
-                                <span class="mr-2 pl-2 helvetica-55 f-14 c-light-text">ვეთანხმები პირობებს</span>
+                                <span class=" helvetica-55 f-14 c-light-text">ვეთანხმები პირობებს</span>
                                 <input type="checkbox" id="isPoliticallyExposedPerson" />
                                 <span class="checkmark"></span>
                             </label>
@@ -476,7 +495,7 @@
                                 <div class="mt-2">
                                     <label class="cheks mb-0 d-flex align-items-center mt-3"
                                         for="isPoliticallyExposedPerson">
-                                        <span class="mr-2 pl-2 helvetica-55 f-14 c-light-text">ვეთანხმები
+                                        <span class=" helvetica-55 f-14 c-light-text">ვეთანხმები
                                             პირობებს</span>
                                         <input type="checkbox" id="isPoliticallyExposedPerson" />
                                         <span class="checkmark"></span>
