--- a/test-scss/competition_1.html
+++ b/test-scss/competition_1.html
@@ -161,10 +161,9 @@
             </nav>
         </div>
     </section>
-    <div class="center mt-4 py-1 mb-3">
-        <a class="btn btn-light" href="competition.html">
-            <img src="./img/back.svg" alt="">
-            back</a>
+    <div class="center py-4 my-2">
+        <button class="btn btn-light helvetica-55 f-16 d-flex align-items-center py-2"><img class="mr-2"
+                src="./img/back.svg" alt=""> ukan</button>
     </div>
 
     <section class="blog__design pb-5">
@@ -173,12 +172,12 @@
                 <img class="w-100" src="./img/vlog.svg" alt="">
             </div>
             <div class="col-12 col-md-8 px-0 right__side">
-                <div class="up__side d-flex flex-column justify-content-between align-items-md-center flex-wrap">
-                    <h1 class="f-20 c-black mt-2 helvetica-75">WEB დეველოპმენტი</h1>
-                    <span class="f-14 d-block d-md-none mt-2 c-card-text helvetica-55 mb-1">25 ივნისი, 2020</span>
+                <div class="align-items-md-center d-flex flex-column flex-md-row flex-wrap justify-content-between up__side">
+                    <h1 class="f-28 c-black mt-2 helvetica-75">WEB დეველოპმენტი</h1>
+                    <span class="f-14 d-block d-md-none mt-2 footer-list c-light-text helvetica-55 mb-1">25 ივნისი, 2020</span>
 
-                    <div class="f-14 c-light-text mt-3 mt-md-2 pl-3 pl-md-0 helvetica-55">დარჩენილია
-                        <span class=" helvetica-75 c-black bc-gray-light br-5 p-1">95</span>:<span
+                    <div class="f-14 d-flex align-items-center c-card-text mt-3 mt-md-2 pl-3 pl-md-0 helvetica-55">დარჩენილია
+                        <span class=" helvetica-75 c-black bc-gray-light br-5 p-1 d-flex ml-1">95</span>:<span
                             class=" helvetica-75 c-black bc-gray-light br-5 p-1">45</span>:<span
                             class=" helvetica-75 c-black bc-gray-light br-5 p-1">25</span>
                     </div>
@@ -186,7 +185,7 @@
                 </div>
                 <span class="f-14 d-none d-md-block mt-2 c-card-text helvetica-55 mb-1">25 ივნისი, 2020</span>
                 <img class="w-100 mt-3 d-flex d-md-none" src="./img/vlog.svg" alt="">
-                <span class="f-14 d-block mt-4 c-card-text helvetica-55 mb-1">შექმენი ციფრული ინდუსტრიის აკადემიის ლოგოს
+                <span class="footer-list d-block mt-4 c-card-text helvetica-55 mb-1">შექმენი ციფრული ინდუსტრიის აკადემიის ლოგოს
                     რედიზაინი; ატვირთე ნამუშევარი
                     ფეისბუქზე ან ინსტაგრამზე; გამოიყენე ჰეშთეგი #logodigitaledu და მონიშნე
                     ციფრული ინდუსტრიის აკადემია.შექმენი ციფრული ინდუსტრიის აკადემიის ლოგოს
@@ -221,7 +220,7 @@
                             1
                         </div>
                         <div class="ml-3 pl-1 right_side">
-                            <span class="f-16 d-block c-black helvetica-55">უფასო კურსი</span>
+                            <span class="f-16 d-block c-black helvetica-75">უფასო კურსი</span>
                             <span
                                 class="f-14 d-block mt-md-3 mt-2 c-light-text helvetica-55 col-md-10 col-12 px-0">პირველ
                                 ადგილზე გასული
@@ -235,7 +234,7 @@
                             1
                         </div>
                         <div class="ml-3 pl-1 right_side">
-                            <span class="f-16 d-block c-black helvetica-55">უფასო კურსი</span>
+                            <span class="f-16 d-block c-black helvetica-75">უფასო კურსი</span>
                             <span
                                 class="f-14 d-block mt-md-3 mt-2 c-light-text helvetica-55 col-md-10 col-12 px-0">პირველ
                                 ადგილზე გასული
@@ -249,7 +248,7 @@
                             1
                         </div>
                         <div class="ml-3 pl-1 right_side">
-                            <span class="f-16 d-block c-black helvetica-55">უფასო კურსი</span>
+                            <span class="f-16 d-block c-black helvetica-75">უფასო კურსი</span>
                             <span
                                 class="f-14 d-block mt-md-3 mt-2 c-light-text helvetica-55 col-md-10 col-12 px-0">პირველ
                                 ადგილზე გასული
