--- a/test-scss/vlog_inner.html
+++ b/test-scss/vlog_inner.html
@@ -141,58 +141,64 @@
             </div>
         </div>
     </header>
-    <div class="center mt-3 d-flex d-md-none">
-        <a class="btn btn-light" href="vlog.html">
-            <img src="./img/back.svg" alt="">
-            back</a>
+    <div class="center py-4 my-2 d-noen d-md-block">
+        <button class="btn btn-light mt-2 helvetica-55 f-16 d-flex align-items-center py-2"><img class="mr-2"
+                src="./img/back.svg" alt=""> ukan</button>
     </div>
     <section class="vlog_iiner">
         <div class="center">
-            <h1 class="f-30 mt-4 c-black helvetica-75 col-12 col-md-9 col-lg-6 p-0 lh-35">4 გავრცელებული მითი UX
+            <h1 class="f-40 mt-4 c-black helvetica-75 col-12 col-md-9 col-lg-6 p-0 lh-50">4 გავრცელებული მითი UX
                 დიზაინის
                 შესახებ
             </h1>
-            <span class="f-14 c-light-text d-flex mt-4 helvetica-55">22 ივლისი, 2019</span>
+            <span class="f-14 c-light-text d-flex mt-md-4 mt-3 helvetica-55 pb-md-4">22 ივლისი, 2019</span>
 
             <div class="d-flex align-items-start justify-content-between mt-3">
                 <div class="main__left col-12 col-md-7 col-lg-8  px-0">
                     <img class="w-100" src="./img/car.svg" alt="">
-                    <span class="f-16 lh-25 c-light-text d-flex mt-3 helvetica-55">მითია თუ რეალობა? ხშირად გაგჩენიათ ეს
+                    <span class="f-16 lh-25 c-card-text d-flex mt-3 helvetica-55">მითია თუ რეალობა? ხშირად გაგჩენიათ ეს
                         შეკითხვა?-ალბათ, კი. ადამიანები საკუთარი
                         ინტერპრეტაციით აფასებენ კონკრეტულ ფაქტებს, შემდეგ კი ახდენენ მათ </span>
-                    <span class="f-16 lh-25 c-light-text d-flex mt-3 helvetica-55">გაეცანით, 4 გავრცელებულ მითს UX
+                    <span class="f-16 lh-25 c-card-text d-flex mt-3 helvetica-55">გაეცანით, 4 გავრცელებულ მითს UX
                         დიზაინის შესახებ:</span>
                     <span class="f-24 lh-25 c-black d-flex mt-3 helvetica-75">მითი #1: UX = UI</span>
-                    <span class="f-16 lh-25 c-light-text d-flex mt-3 helvetica-55">ეს ყველაზე გვარცელებული მითია.
+                    <span class="f-16 lh-25 c-card-text d-flex mt-md-3 mt-2 helvetica-55">ეს ყველაზე გვარცელებული მითია.
                         ადამიანები, რომლებიც ამ სფეროში არ არიან ხშირად
                         ფიქრობენ, რომ UI და UX დიზაინი ერთი და იგივეა. რეალურად ეს, ასე არ არის. ეს ორი
                     </span>
-                    <span class="f-16 lh-25 c-light-text d-flex mt-3 helvetica-55">ეს ყველაზე გვარცელებული მითია.
+                    <span class="f-16 lh-25 c-card-text d-flex mt-3 helvetica-55">ეს ყველაზე გვარცელებული მითია.
                         ადამიანები, რომლებიც ამ სფეროში არ არიან ხშირად
                         ფიქრობენ, რომ UI და UX დიზაინი ერთი და იგივეა. რეალურად ეს, ასე არ არის. ეს ორი
                     </span>
 
-                    <span class="f-30 lh-25 c-black d-flex mt-4 helvetica-75 lh-35">თუ გავიხსენებთ ჩვენთვის კარგად
+                    <span class="f-30 lh-25 c-black d-flex mt-4 helvetica-75 lh-35 position-relative ml-4 ml-md-0">თუ გავიხსენებთ ჩვენთვის კარგად
                         ნაცნობ
                         წარმატებულ კომპანიებს ბევრ მათგანს
-                        ლოგოში სიმბოლოს ნაცვლად </span>
+                        ლოგოში სიმბოლოს ნაცვლად
+                    <span class=" position-absolute top-0" style="left: -40px;">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="27.36" height="20" viewBox="0 0 27.36 20">
+                            <path id="Path_15586" data-name="Path 15586" d="M772.924-330.2v-8.6a15.257,15.257,0,0,1,.605-4.378,10.2,10.2,0,0,1,1.859-3.607,9.1,9.1,0,0,1,3.211-2.478,10.477,10.477,0,0,1,4.559-.933v3.877a4.748,4.748,0,0,0-2.605.657,5.23,5.23,0,0,0-1.672,1.745,6.975,6.975,0,0,0-.888,2.443,15.692,15.692,0,0,0-.232,2.674h5.492v8.6Zm17.03,0v-8.6a15.379,15.379,0,0,1,.606-4.378,10.261,10.261,0,0,1,1.863-3.607,9.063,9.063,0,0,1,3.211-2.478,10.479,10.479,0,0,1,4.56-.933v3.877a4.739,4.739,0,0,0-2.606.657,5.25,5.25,0,0,0-1.676,1.745,6.975,6.975,0,0,0-.884,2.443,15.685,15.685,0,0,0-.232,2.674h5.489v8.6Z" transform="translate(-772.924 350.201)" fill="#9f32fc"/>
+                          </svg>
+                          
+                    </span>
+                    </span>
                     <div class="img-block w-100 d-flex justify-content-center mt-5">
                         <img class="col-12 col-md-10 p-0" src="./img/Image2.svg" alt="">
                     </div>
 
-                    <span class="f-16 c-light-text d-flex mt-3 helvetica-55 lh-25">არ არის აუცილებელი, რომ ლოგო სიმბოლოს
+                    <span class="f-16 c-card-text d-flex mt-3 helvetica-55 lh-25">არ არის აუცილებელი, რომ ლოგო სიმბოლოს
                         შეიცავდეს. თუ გავიხსენებთ ჩვენთვის
                         კარგად ნაცნობ წარმატებულ კომპანიებს ბევრ მათგანს ლოგოში სიმბოლოს ნაცვლად
                         ტიპოგრაფია აქვს გამოყენებული.</span>
-                    <span class="f-16 c-light-text d-flex mt-4 helvetica-55 lh-25">მიუხედავად ამისა, ეს არ ნიშნავს იმას,
+                    <span class="f-16 c-card-text d-flex mt-4 helvetica-55 lh-25">მიუხედავად ამისა, ეს არ ნიშნავს იმას,
                         რომ ლოგო არ უნდა გამოიხატოს სიმბოლოთი.
                         ზოგჯერ სიმბოლო შესაძლოა მეტად დასამახსოვრებელი იყოს, ვიდრე უბრალოდ წარწერა.
                         გამოიყენეთ სიმბოლო თუ გსურთ გამოხატოთ თქვენი ბრენდის შესახებ რაიმე </span>
                     <div
                         class="tegs py-3 mt-5 d-flex align-items-center justify-content-between border-top border-bottom">
                         <div class="left__side d-flex align-items-center flex-wrap">
-                            <span class="f-16 c-black d-flex  helvetica-75 lh-25">თეგები:</span>
-                            <span class="f-16 c-light-text d-flex  helvetica-55 lh-25">მარკეტინგი, დიზაინი, ციფრული
+                            <span class="f-14 c-black d-flex  helvetica-75 lh-25">თეგები:</span>
+                            <span class="f-14 c-light-text d-flex  helvetica-55 lh-25 pl-1">მარკეტინგი, დიზაინი, ციფრული
                                 ინდისტრია</span>
                         </div>
                         <div class="right-__side d-none d-md-flex align-items-center">
@@ -226,7 +232,7 @@
                             <span class="f-14 text-center d-none d-md-flex c-black helvetica-55">არ გამოტოვო საუკეთესო
                                 შეთავაზებები! .</span>
                             <button
-                                class="bc-white border-0 br-8 c-blue c-hover-white helvetica-75 hover-bc-blue mt-4 px-2 py-2 transition">გაიგე
+                                class="bc-white border-0 br-8 c-blue c-hover-white helvetica-75 hover-bc-blue mt-4 px-2 py-3 transition">გაიგე
                                 მეტი</button>
 
                         </div>
@@ -242,13 +248,6 @@
                     </div>
                 </div>
             </div>
-        </div>
-    </section>
-
-
-    <section class="inner__block">
-        <div class="center">
-
         </div>
     </section>
 
